Bug 15994 - CTDB doesn't send tickle ACKs when taking over a released IP
Summary: CTDB doesn't send tickle ACKs when taking over a released IP
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: CTDB (show other bugs)
Version: 4.18.10
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-08 04:34 UTC by Martin Schwenke
Modified: 2026-08-03 19:37 UTC (History)
3 users (show)

See Also:


Attachments
Patch for v4-24-test, v4-23-test (3.83 KB, patch)
2026-04-29 04:51 UTC, Martin Schwenke
amitay: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schwenke 2026-02-08 04:34:29 UTC
On RELEASE_IP, the releasing node receives CTDB_CONTROL_TCP_CLIENT_DISCONNECTED, which causes the TCP connection to be removed from the tracking list on all nodes via CTDB_CONTROL_TCP_REMOVE.

This means that the takeover node does not know about the TCP connection, so does not send tickle ACKs to the client.

This was noticed after (finally) running CTDB cluster tests under autocluster for the first time in a long time and finding that ctdb/tests/CLUSTER/complex/32_cifs_tickle.sh was failing.

Avoiding removal of the TCP connection during RELEASE_IP in ctdb_control_tcp_client_disconnected() fixes the issue.

Sorry, I missed this when reviewing c6602b686b4e50d93272667ef86d3904181fb1ab in 2023.  I will now regularly test via autocluster to ensure we don't see similar regressions.
Comment 1 Samba QA Contact 2026-04-29 02:59:03 UTC
This bug was referenced in samba master:

9351c9f3b5a57239a7fbdd818e8ab72ecc469d9d
Comment 2 Martin Schwenke 2026-04-29 04:51:26 UTC
Created attachment 18955 [details]
Patch for v4-24-test, v4-23-test

Cherry picks cleanly into v4-24-test.  Resulting patch applies to v4-23-test with "git am".  Both versions build without issues.

The code hasn't changed enough in recent versions to require separate testing outside of the master branch.
Comment 3 Martin Schwenke 2026-05-26 23:47:43 UTC
This was https://gitlab.com/samba-team/samba/-/merge_requests/4407
Comment 4 Martin Schwenke 2026-06-03 04:10:15 UTC
metze: Are you happy to review the attached patch?  You reviewed the MR.  Thanks... :-)
Comment 5 Martin Schwenke 2026-07-10 00:28:39 UTC
Hi Björn,

This is ready for 4.24 and 4.23.

Thanks!
Comment 6 Samba QA Contact 2026-07-28 12:15:03 UTC
This bug was referenced in samba v4-24-test:

1247c61cb2ba39f420d114ab60a3dfa19853b6eb
Comment 7 Samba QA Contact 2026-07-28 12:27:03 UTC
This bug was referenced in samba v4-23-test:

ddefd541870752fadacc3921a0240e1938fa619c
Comment 8 Samba QA Contact 2026-08-03 19:37:02 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.11):

ddefd541870752fadacc3921a0240e1938fa619c