ctdb-server: Avoid removing connections for released IP

Commit c6602b686b4e50d93272667ef86d3904181fb1ab causes TCP connections
to be cleared whenever an associated client goes away.  This shouldn't
happen when the associated public IP is being released, since the
takeover node will need the connection details to send tickle ACKs.

Sorry, I missed this when reviewing that commit.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=15994

Signed-off-by: Martin Schwenke <mschwenke@ddn.com>
Reviewed-by: Stefan Metzmacher <metze@samba.org>

Autobuild-User(master): Martin Schwenke <martins@samba.org>
Autobuild-Date(master): Wed Apr 29 02:58:12 UTC 2026 on atb-devel-224

(cherry picked from commit 9351c9f3b5a57239a7fbdd818e8ab72ecc469d9d)

Autobuild-User(v4-24-test): Björn Jacke <bjacke@samba.org>
Autobuild-Date(v4-24-test): Tue Jul 28 12:14:16 UTC 2026 on atb-devel-224